--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ discord = "^1.0.1"
 flask = "^1.1.2"
 dnspython = "^2.0.0"
 pymongo = "^3.11.0"
+"discord.py" = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 
